# outpost

./: .gitignore  .ideate.json  CLAUDE.md  README.md  conftest.py
.claude-plugin/: marketplace.json  plugin.json
.ideate/constraints/: C-01.yaml  C-02.yaml  C-03.yaml  C-04.yaml  C-05.yaml  C-06.yaml  C-07.yaml  C-08.yaml  C-09.yaml  C-10.yaml  C-11.yaml  C-12.yaml  C-13.yaml  C-14.yaml  C-15.yaml  C-16.yaml  C-17.yaml  C-18.yaml  C-19.yaml
.ideate/decisions/: D-01.yaml  D-02.yaml  D-03.yaml  D-04.yaml  D-05.yaml  D-06.yaml  D-07.yaml  D-08.yaml  D-09.yaml  D-10.yaml  D-11.yaml  D-12.yaml  D-13.yaml  D-14.yaml  D-15.yaml  D-16.yaml  D-17.yaml  D-18.yaml  D-19.yaml  D-20.yaml  D-21.yaml  D-22.yaml  D-23.yaml  D-24.yaml  D-25.yaml  D-26.yaml  D-27.yaml  D-28.yaml  D-29.yaml  D-30.yaml  D-31.yaml  D-32.yaml  D-33.yaml  D-34.yaml
.ideate/interviews/: legacy.yaml
.ideate/phases/: PH-001.yaml
.ideate/plan/: architecture.yaml  execution-strategy.yaml  overview.yaml
.ideate/policies/: P-01.yaml  P-02.yaml  P-03.yaml  P-04.yaml  P-05.yaml  P-06.yaml  P-07.yaml  P-08.yaml
.ideate/principles/: GP-01.yaml  GP-02.yaml  GP-03.yaml  GP-04.yaml  GP-05.yaml  GP-06.yaml  GP-07.yaml  GP-08.yaml  GP-09.yaml  GP-10.yaml  GP-11.yaml  GP-12.yaml
.ideate/questions/: Q-01.yaml  Q-02.yaml  Q-03.yaml  Q-04.yaml  Q-05.yaml  Q-06.yaml  Q-07.yaml  (+22 more)
agents/: manager.md
mcp/: test_integration.py
mcp/remote-worker/: Dockerfile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  server.py  test_server.py
specs/: brrr-state.md  journal.md  metrics.jsonl  migration-log.md
(+436 files in other folders)
